src/main/java/grump/GrumpParser.java
package grump;
// Generated from Grump.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrumpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FLOAT=1, INT=2, CONSTRAINT=3, DEFAULT=4, DOMAIN=5, MAX_DOUBLE=6, MIN_DOUBLE=7, 
		PI=8, GOLDEN_RATIO=9, IntegerLiteral=10, FloatingPointLiteral=11, LPAREN=12, 
		RPAREN=13, LBRACE=14, RBRACE=15, LBRACK=16, RBRACK=17, SEMI=18, COMMA=19, 
		DOT=20, EQUALS=21, ADD=22, SUB=23, MUL=24, DIV=25, Symbol=26, WS=27, LINE_COMMENT=28;
	public static final int
		RULE_grump = 0, RULE_topLevelStatements = 1, RULE_topLevelStatement = 2, 
		RULE_parameterStatement = 3, RULE_constraintStatement = 4, RULE_parameterAssignment = 5, 
		RULE_constraint = 6, RULE_domain = 7, RULE_domainInterval = 8, RULE_defaultValue = 9, 
		RULE_minExpression = 10, RULE_maxExpression = 11, RULE_expressions = 12, 
		RULE_expression = 13, RULE_expressionTerm = 14, RULE_enclosedExpression = 15, 
		RULE_negationExpression = 16, RULE_functionInvocation = 17, RULE_arguments = 18, 
		RULE_constant = 19, RULE_reference = 20;
	public static final String[] ruleNames = {
		"grump", "topLevelStatements", "topLevelStatement", "parameterStatement", 
		"constraintStatement", "parameterAssignment", "constraint", "domain", 
		"domainInterval", "defaultValue", "minExpression", "maxExpression", "expressions", 
		"expression", "expressionTerm", "enclosedExpression", "negationExpression", 
		"functionInvocation", "arguments", "constant", "reference"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'float'", "'int'", "'constraint'", "'default'", "'domain'", "'MAX_DOUBLE'", 
		"'MIN_DOUBLE'", "'PI'", "'GOLDEN_RATIO'", null, null, "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "';'", "','", "'.'", "'='", "'+'", "'-'", "'*'", 
		"'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "FLOAT", "INT", "CONSTRAINT", "DEFAULT", "DOMAIN", "MAX_DOUBLE", 
		"MIN_DOUBLE", "PI", "GOLDEN_RATIO", "IntegerLiteral", "FloatingPointLiteral", 
		"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
		"DOT", "EQUALS", "ADD", "SUB", "MUL", "DIV", "Symbol", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grump.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrumpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GrumpContext extends ParserRuleContext {
		public TopLevelStatementsContext topLevelStatements() {
			return getRuleContext(TopLevelStatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrumpParser.EOF, 0); }
		public GrumpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grump; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterGrump(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitGrump(this);
		}
	}

	public final GrumpContext grump() throws RecognitionException {
		GrumpContext _localctx = new GrumpContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grump);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			topLevelStatements();
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelStatementsContext extends ParserRuleContext {
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public TopLevelStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterTopLevelStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitTopLevelStatements(this);
		}
	}

	public final TopLevelStatementsContext topLevelStatements() throws RecognitionException {
		TopLevelStatementsContext _localctx = new TopLevelStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FLOAT || _la==CONSTRAINT) {
				{
				{
				setState(45);
				topLevelStatement();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelStatementContext extends ParserRuleContext {
		public ParameterStatementContext parameterStatement() {
			return getRuleContext(ParameterStatementContext.class,0);
		}
		public ConstraintStatementContext constraintStatement() {
			return getRuleContext(ConstraintStatementContext.class,0);
		}
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterTopLevelStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitTopLevelStatement(this);
		}
	}

	public final TopLevelStatementContext topLevelStatement() throws RecognitionException {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topLevelStatement);
		try {
			setState(53);
			switch (_input.LA(1)) {
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				parameterStatement();
				}
				break;
			case CONSTRAINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				constraintStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterStatementContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(GrumpParser.FLOAT, 0); }
		public List<ParameterAssignmentContext> parameterAssignment() {
			return getRuleContexts(ParameterAssignmentContext.class);
		}
		public ParameterAssignmentContext parameterAssignment(int i) {
			return getRuleContext(ParameterAssignmentContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(GrumpParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GrumpParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrumpParser.COMMA, i);
		}
		public ParameterStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterParameterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitParameterStatement(this);
		}
	}

	public final ParameterStatementContext parameterStatement() throws RecognitionException {
		ParameterStatementContext _localctx = new ParameterStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameterStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(FLOAT);
			setState(56);
			parameterAssignment();
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(57);
				match(COMMA);
				setState(58);
				parameterAssignment();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintStatementContext extends ParserRuleContext {
		public TerminalNode CONSTRAINT() { return getToken(GrumpParser.CONSTRAINT, 0); }
		public List<ConstraintContext> constraint() {
			return getRuleContexts(ConstraintContext.class);
		}
		public ConstraintContext constraint(int i) {
			return getRuleContext(ConstraintContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(GrumpParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GrumpParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrumpParser.COMMA, i);
		}
		public ConstraintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraintStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterConstraintStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitConstraintStatement(this);
		}
	}

	public final ConstraintStatementContext constraintStatement() throws RecognitionException {
		ConstraintStatementContext _localctx = new ConstraintStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constraintStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(CONSTRAINT);
			setState(67);
			constraint();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(68);
				match(COMMA);
				setState(69);
				constraint();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterAssignmentContext extends ParserRuleContext {
		public TerminalNode Symbol() { return getToken(GrumpParser.Symbol, 0); }
		public TerminalNode EQUALS() { return getToken(GrumpParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DomainContext domain() {
			return getRuleContext(DomainContext.class,0);
		}
		public ParameterAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterParameterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitParameterAssignment(this);
		}
	}

	public final ParameterAssignmentContext parameterAssignment() throws RecognitionException {
		ParameterAssignmentContext _localctx = new ParameterAssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameterAssignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(Symbol);
			setState(83);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(78);
				match(EQUALS);
				setState(81);
				switch (_input.LA(1)) {
				case MAX_DOUBLE:
				case MIN_DOUBLE:
				case PI:
				case GOLDEN_RATIO:
				case IntegerLiteral:
				case FloatingPointLiteral:
				case LPAREN:
				case SUB:
				case Symbol:
					{
					setState(79);
					expression(0);
					}
					break;
				case DEFAULT:
				case DOMAIN:
					{
					setState(80);
					domain();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(GrumpParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(GrumpParser.EQUALS, i);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitConstraint(this);
		}
	}

	public final ConstraintContext constraint() throws RecognitionException {
		ConstraintContext _localctx = new ConstraintContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constraint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			expression(0);
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				match(EQUALS);
				setState(87);
				expression(0);
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EQUALS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainContext extends ParserRuleContext {
		public DomainIntervalContext domainInterval() {
			return getRuleContext(DomainIntervalContext.class,0);
		}
		public DefaultValueContext defaultValue() {
			return getRuleContext(DefaultValueContext.class,0);
		}
		public DomainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterDomain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitDomain(this);
		}
	}

	public final DomainContext domain() throws RecognitionException {
		DomainContext _localctx = new DomainContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_domain);
		int _la;
		try {
			setState(97);
			switch (_input.LA(1)) {
			case DOMAIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				domainInterval();
				setState(94);
				_la = _input.LA(1);
				if (_la==DEFAULT) {
					{
					setState(93);
					defaultValue();
					}
				}

				}
				break;
			case DEFAULT:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				defaultValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainIntervalContext extends ParserRuleContext {
		public TerminalNode DOMAIN() { return getToken(GrumpParser.DOMAIN, 0); }
		public MinExpressionContext minExpression() {
			return getRuleContext(MinExpressionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(GrumpParser.COMMA, 0); }
		public MaxExpressionContext maxExpression() {
			return getRuleContext(MaxExpressionContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(GrumpParser.LPAREN, 0); }
		public TerminalNode LBRACK() { return getToken(GrumpParser.LBRACK, 0); }
		public TerminalNode RPAREN() { return getToken(GrumpParser.RPAREN, 0); }
		public TerminalNode RBRACK() { return getToken(GrumpParser.RBRACK, 0); }
		public DomainIntervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domainInterval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterDomainInterval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitDomainInterval(this);
		}
	}

	public final DomainIntervalContext domainInterval() throws RecognitionException {
		DomainIntervalContext _localctx = new DomainIntervalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_domainInterval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(DOMAIN);
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==LPAREN || _la==LBRACK) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(101);
			minExpression();
			setState(102);
			match(COMMA);
			setState(103);
			maxExpression();
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==RPAREN || _la==RBRACK) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefaultValueContext extends ParserRuleContext {
		public TerminalNode DEFAULT() { return getToken(GrumpParser.DEFAULT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefaultValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defaultValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterDefaultValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitDefaultValue(this);
		}
	}

	public final DefaultValueContext defaultValue() throws RecognitionException {
		DefaultValueContext _localctx = new DefaultValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_defaultValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(DEFAULT);
			setState(107);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MinExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MinExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterMinExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitMinExpression(this);
		}
	}

	public final MinExpressionContext minExpression() throws RecognitionException {
		MinExpressionContext _localctx = new MinExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_minExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MaxExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MaxExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_maxExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterMaxExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitMaxExpression(this);
		}
	}

	public final MaxExpressionContext maxExpression() throws RecognitionException {
		MaxExpressionContext _localctx = new MaxExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_maxExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionsContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrumpParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrumpParser.COMMA, i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).enterExpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrumpListener ) ((GrumpListener)listener).exitExpressions(this);
		}
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			expression(0);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(114);
				match(COMMA);
				setState(115);
				expression(0);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
